<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kisi_duzenle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rehber.rehberuygulamasi.KisiDuzenle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duzenle"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/darker_gray"
        ></View>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/p2"
        android:id="@+id/imgviewresimekleduzen"
        android:clickable="true"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="5dp"
        android:id="@+id/zil1"
        android:layout_marginBottom="10dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtisimduzen"
        android:layout_marginBottom="5dp"
        android:hint="@string/isim"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txttelefonduzen"
        android:inputType="number"
        android:layout_marginBottom="5dp"
        android:hint="@string/telefon"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtepostaduzen"
        android:layout_marginBottom="5dp"
        android:hint="@string/eposta"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zilsesi"
            android:textSize="20dp"
            android:id="@+id/txtzilses"


            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/muziksecduzenle"
            android:text="@string/muziksec"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guncelle"
        android:background="@color/btncolor"
        android:textColor="@android:color/white"
        android:id="@+id/btnduzen"
        />

</LinearLayout>
