<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_yeni_kisi_ekle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rehber.rehberuygulamasi.YeniKisiEkle"
    android:weightSum="1">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yenikullanici"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        ></View>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/p2"
        android:id="@+id/imgviewresimekle"
        android:clickable="true"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtisim"
        android:layout_marginBottom="5dp"
        android:hint="@string/isim"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txttelefon"
        android:inputType="number"
        android:layout_marginBottom="5dp"
        android:hint="@string/telefon"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txteposta"
        android:layout_marginBottom="5dp"
        android:hint="@string/eposta"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zilsesi"
            android:textSize="20dp"
            android:id="@+id/:txtzlsess"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/muziksec"
            android:text="@string/muziksec"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kaydet"
        android:background="@color/btncolor"
        android:textColor="@android:color/white"
        android:id="@+id/btnkaydet"
        android:layout_marginBottom="5dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageview"/>





</LinearLayout>
