<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kisi_goster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rehber.rehberuygulamasi.KisiGoster">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/imggostermealanı"
        android:background="@color/colorAccent"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/btncolor"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="15dp"
        android:id="@+id/zil"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isimgoster"
        android:textColor="@color/btncolor"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/gosterad"
        android:layout_marginRight="15dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/btncolor"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/Aktarılanİsim"
            />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ceptelefon"
            android:textColor="@color/btncolor"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/gostertel"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/btncolor"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/AktarılanTelefon"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eposta"
            android:textColor="@color/btncolor"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/gostereposta"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/btncolor"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/AktarılanEposta"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zilsesi"
            android:textColor="@color/btncolor"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AktarılanMuzik"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            />

    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ca"
        android:id="@+id/btnara"
        />


</LinearLayout>
